Fix: Footer 모바일 뷰 , margin-top 필요한 페이지들 수정 #131 - 모바일 body overflow-x hidden 추가

--- a/src/app/(user)/signup/_SignupPage.scss
+++ b/src/app/(user)/signup/_SignupPage.scss
@@ -32,3 +32,9 @@
     white-space: nowrap;
   }
 }
+
+@media (max-width: 480px) {
+  .signup-page-container {
+    margin-top: 20rem;
+  }
+}
